<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_relative"
    android:background="@color/bg_color">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/home_map_frag"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/search_txt"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_below="@+id/home_map_frag"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:text="@string/search_company_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="TextSizeCheck" />

    <android.widget.SearchView
        android:id="@+id/home_search"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/search_txt"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:scrollbarStyle="insideInset"
        android:background="@drawable/edittext_bg" />

    <LinearLayout
        android:id="@+id/home_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/home_search"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/home_CV_washing"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:elevation="4dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/card_bg">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:srcCompat="@drawable/img_washing"
                android:contentDescription="@string/img_washing" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/washing"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="80dp"/>

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="10dp"
            android:layout_height="100dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/home_CV_servicing"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:elevation="4dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/card_bg">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:srcCompat="@drawable/img_servicing"
                android:contentDescription="@string/img_servicing" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/servicing"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="80dp"/>
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="10dp"
            android:layout_height="100dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/home_CV_others"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:elevation="4dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/card_bg">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/others"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="40dp"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/did_not_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/didn_t_register_yet"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/dark_red"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/home_linear"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/yet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_below_to_register"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/did_not_register"
        android:layout_marginTop="0dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/yet"
        android:layout_marginTop="21dp"
        android:gravity="center">
        <Button
            android:layout_width="127dp"
            android:layout_height="48dp"
            android:background="@drawable/button_bg"
            android:text="@string/register"
            android:textColor="@color/white"/>
    </LinearLayout>

</RelativeLayout>